fix public page and login link

--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -178,7 +178,7 @@
       </div>
       <button type="submit">Login</button>
       <div class="signin">
-        <p>Don't have an account? <a href="./signup">Sign Up</a></p>
+        <p>Don't have an account? <a href="/register">Sign Up</a></p>
       </div>
     </form>
   </div>
